# vsomeip

./: .gitignore  CMakeLists.txt
documentation/: vsomeip_architecture_zh.md
zhr/: CMakeLists.txt  README.md  readme_ep.md  readme_route.md
zhr/01_request_response/: CMakeLists.txt  vsomeip.json
zhr/02_event/: CMakeLists.txt  publisher.cpp  subscriber.cpp  vsomeip.json
zhr/03_field/: CMakeLists.txt  client.cpp  service.cpp  vsomeip.json
zhr/demo_request/: CMakeLists.txt  client.cpp  service.cpp
